--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/scout": "^10.2",
+        "laravel/tinker": "^2.8",
+        "teamtnt/laravel-scout-tntsearch-driver": "^12.4",
+        "teamtnt/tntsearch": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
